--- a/tests/tickets/13763/1.md
+++ b/tests/tickets/13763/1.md
@@ -1,4 +1,4 @@
-@bender-tags: 13763, 4.7.1, bug
+@bender-tags: 554, 4.7.1, bug, jquery
 @bender-ui: collapsed
 @bender-ckeditor-plugins: undo,clipboard,basicstyles,toolbar,wysiwygarea
 
